# instagram-scraper

./: .env.example  .gitignore  Luanny.spec  Projeto Luanny - Implementação.md  README.md  file_structure.md  get_tree.bat  investigate_alt.py  pyproject.toml  test_extractor.py  test_links.py  test_parents.py  test_scroll.py
docs/: ANALISE_GUI_VERSAO_FUTURA.md  INSTALL.md  PLANO_ACAO_COLETA_INCREMENTAL.md  USAGE.md  sobre_dados_coletados_idioma.md
implementation_logs/: implementation_plan.md  implementation_plan.md.metadata.json  task.md  task.md.metadata.json  walkthrough.md  walkthrough.md.metadata.json
scripts/: build.py
src/luanny/: __init__.py  __main__.py  auth.py  browser.py  build_smoke.py  cli.py  collection_state.py  config.py  evidence_capture.py  execution_manifest.py  exporters.py  log.py  models.py  orchestrator.py  post_extractor.py  profile_discovery.py  runtime_paths.py  selectors.py
tests/: conftest.py  test_auth.py  test_browser.py  test_build_smoke.py  test_cli.py  test_collection_state.py  test_config.py  test_discovery.py  test_e2e.py  test_evidence.py  test_execution_manifest.py  test_exporters.py  test_extractor.py  test_models.py  test_orchestrator_phase2.py  test_robustness.py
tests/fixtures/instagram/: __init__.py
